plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.2.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
}

version = '1.0.0-SNAPSHOT'

group = 'com.fedorizvekov'
description = 'Dynamic enum creation by reflection'

sourceCompatibility = JavaVersion.VERSION_11

ext {
    springBootVersion = '2.2.2.RELEASE'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")

    compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


jar {
    manifest {
        attributes 'Main-Class': 'com.fedorizvekov.DynamicEnumApplication'
    }
}

compileJava {
    options.compilerArgs << "--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"
}

test {
    doFirst {
        jvmArgs += ["--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"]
    }
    useJUnitPlatform()
    testLogging {
        showStackTraces = true
        exceptionFormat = 'full'
        events 'passed', 'skipped', 'failed'
    }
}
